--- a/frontend/src/styles/customer/ProductCard.module.scss
+++ b/frontend/src/styles/customer/ProductCard.module.scss
@@ -126,7 +126,7 @@
 .trendingBadge,
 .bestsellerBadge {
   position: absolute;
-  top: 0.6rem;
+  top: 3.1rem;
   right: 0.6rem;
   font-size: 0.7rem;
   font-weight: 900;
