--- a/frontend/src/styles/manager/ManagerModals.module.scss
+++ b/frontend/src/styles/manager/ManagerModals.module.scss
@@ -94,12 +94,12 @@
 }
 
 .addProductModal::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
 }
 
 .addProductModal::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 10px;
+  background: rgba(201, 168, 76, 0.4);
+  border-radius: 999px;
 }
 
 .modalCloseBtn {
